# BumRunGrad_Centers_Scraping

./: .gitignore  README.md  pyproject.toml
.streamlit/: secrets.toml
bumRunGrad_Centers/: FirstAllCentersjson.py  firstAllCenters.json  firstAllCenters.py  firstAllCentersbumrungrad_playwright.html
bumRunGrad_Data/: AllCentersContactAndDoctorsInfo.py  allCentersContactInfo.py  bumrungrad_centers_complete_data.json  bumrungrad_centers_complete_data2222.json
chatbot/: .env  app.py
